满足Pipeline, filter，transformer和selection功能 拓扑树 TODO: Aggregation, Merge功能